# rocket-timer

./: .env  Cargo.toml  Dockerfile  Rocket.toml
migrations/2019-12-03-204839_create_stopwatches/: down.sql  up.sql
src/: fairings.rs  main.rs  models.rs  schema.rs  stopwatches.rs
templates/: index.html.hbs
